project/full-stack_chatApp/k8s_1/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
      - name: backend-chat-app
        image: iemafzal/backend:v1
        ports:
        - containerPort: 5001
