project/full-stack_chatApp/k8s_1/front-end-services.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat-app
spec:
  selector:
    app: chat-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
