project/full-stack_chatApp/k8s_1/mongo-services.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: chat-app
spec:
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
