project/full-stack_chatApp/k8s_1/ingress_path_based.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
 name: chat-app-ingress
 namespace: chat-app
 labels:
  name: chat-app-ingress
 annotations:
  #nginx.ingress.kubernetes.io/rewrite-target: /
  nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: frontend
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service: 
            name: backend
            port: 
              number: 5001
